[project]
name = "blackdash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.12"
classifiers = [
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11", 
]
dependencies = [
    "dash>=2.18.1",
    "flask>=3.0.3",
    "jinja2>=3.1.4",
    "lxml>=5.3.0",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "pillow>=10.4.0",
    "plotly>=5.24.1",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "tenacity>=9.0.0",
    "yfinance>=0.2.43",
]
