[project]
name = "blackdash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10, <3.12"
classifiers = [
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11", 
]
dependencies = [
    "dash-bootstrap-components>=1.6.0",
    "dash>=2.18.1",
    "flask>=3.0.3",
    "jinja2>=3.1.4",
    "lxml>=5.3.0",
    "matplotlib>=3.9.2",
    "numpy<2",
    "pandas>=2.2.3",
    "pillow>=10.4.0",
    "plotly>=5.24.1",
    "pmdarima>=2.0.4",
    "prophet>=1.1.5",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "tenacity>=9.0.0",
    "yfinance>=0.2.43",
]
